# factorio-replay-tools

./: .gitignore  Cargo.toml  map_header_dump.txt  map_header_dump_level-init.txt  map_header_dump_level.txt
data/: control_instrumented.lua  data.min.json  insights.txt  optimization.txt  readme.txt  test-0.17.69-level.dat.bak
factorio-serialize/: Cargo.toml
factorio-serialize/factorio-serialize-derive/: Cargo.toml
factorio-serialize/factorio-serialize-derive/src/: lib.rs
factorio-serialize/src/: constants.rs  error.rs  inputaction.rs  lib.rs  map.rs  reader.rs  replay.rs  save.rs  script.rs  structs.rs  writer.rs
factorio-serialize/src/constants/: achievement.rs  decorative.rs  entity.rs  equipment.rs  fluid.rs  item.rs  itemgroup.rs  recipe.rs  technology.rs  tile.rs  virtualsignal.rs
factorio-serialize/src/structs/: boundingbox.rs  fixedpointnumber.rs  mapposition.rs  randomgenerator.rs  vector.rs  vectororientation.rs
src/: action.rs  constants.rs  gameconfig.rs  hexfloat.rs  main.rs  prototypes.rs  random.rs  replay.rs  runner.rs  simulation.rs  singleplayerrunner.rs  util.rs
